apps/grafana/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: grafana-ingress
  namespace: grafana
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
    ignore-check.kube-linter.io/dangling-ingress: "Managed by Helm"
spec:
  ingressClassName: nginx
  rules:
  - host: grafana.k8s.s6n.jp
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: grafana
            port:
              number: 80
  tls:
  - hosts:
    - grafana.k8s.s6n.jp
    secretName: grafana-ingress-tls
